Add a version class representing a semantic version

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,7 +12,8 @@ endfunction()
 # library
 add_library(meta
     source/source_location.cpp
-    source/type_name.cpp)
+    source/type_name.cpp
+    source/version.cpp)
 target_compile_features(meta PUBLIC cxx_std_17)
 target_include_directories(meta INTERFACE include)
 target_include_directories(meta PRIVATE include/meta)
@@ -20,6 +21,7 @@ target_include_directories(meta PRIVATE include/meta)
 # examples
 meta_add_example(source_location)
 meta_add_example(type_name)
+meta_add_example(version)
 
 # test
 add_executable(meta_test test/catch/main.cpp
